  properly.
- The "try again" button on error pages now works correctly with JavaScript
  disabled.
- If a GreaseMonkey script doesn't have a "@run-at" comment, qutebrowser
  accidentally treated that as "@run-at document-idle". However, other
  GreaseMonkey implementations default to "@run-at document-end" instead, which
  is what qutebrowser now does, too.

[[v2.0.2]]
v2.0.2 (2021-02-04)
-------------------

Fixed
~~~~~

- When right-clicking an empty part of the downloads bar, qutebrowser v2.0.x
  would crash. This is now fixed.
- Setting `content.cookies.store` to `false` only worked properly when this was
  done after qutebrowser was already started due to a regression in v2.0.0. It now
  works as expected again.
- If qutebrowser was installed as a Python egg with Python 3.8 or 3.9,
  requesting unavailable resource files (such as PDF.js not being bundled, or a
  missing changelog file) caused in a crash due to an inconsistent behavior in
  those versions of Python. This is now handled properly by qutebrowser.
- In v2.0.0, support for importing the `sip` dependency as `sip` rather than
  `PyQt5.sip` was dropped, since upstream claims it should be used as `PyQt5.sip`
  ever since PyQt 5.11. However, some distributions still package sip as a global
  `sip` package. Thus, support for a global `sip` package is now reintroduced.
- The changelog for v2.0.0 claimed that `hints.leave_on_load` was set to `true`
  by default. However, the `input.insert_mode.leave_on_load` setting was instead
  set to `true` accidentally. This is now fixed by actually setting
  `hints.leave_on_load` to `true`, and reversing the change to
  `input.insert_mode.leave_on_load` so it is set to `false` by default again.
- When the `importlib_resources` package is required but was missing, users
  would get a Python stacktrace rather than a proper error message. This is now
  fixed.
- Site-specific quirk JavaScript files were loaded lazily rather than preloaded