@@ -311,6 +311,20 @@ qt.workarounds.remove_service_workers:
     Note however that enabling this option *can lead to data loss* on some pages (as
     Service Worker data isn't persisted) and will negatively impact start-up time.
 
+qt.workarounds.locale:
+  type: Bool
+  default: false
+  backend: QtWebEngine
+  desc: >-
+    Work around locale parsing issues in QtWebEngine 5.15.3.
+
+    With some locales, QtWebEngine 5.15.3 is unusable without this workaround.
+    In affected scenarios, QtWebEngine will log "Network service crashed,
+    restarting service." and only display a blank page.
+
+    However, It is expected that distributions shipping QtWebEngine 5.15.3
+    follow up with a proper fix soon, so it is disabled by default.
+
 ## auto_save
 
 auto_save.interval:
