@@ -97,6 +97,12 @@ Fixed
   accidentally treated that as "@run-at document-idle". However, other
   GreaseMonkey implementations default to "@run-at document-end" instead, which
   is what qutebrowser now does, too.
+- With QtWebEngine 5.15.3 and some locales, Chromium can't start its
+  subprocesses. As a result, qutebrowser only shows a blank page and logs
+  "Network service crashed, restarting service.".  This release adds a
+  `qt.workarounds.locale` setting working around the issue. It is disabled by
+  default since distributions shipping 5.15.3 will probably have a proper patch
+  for it backported very soon.
 
 [[v2.0.2]]
 v2.0.2 (2021-02-04)
